--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -30,6 +30,7 @@ img{
 	height: 350px;
 	width: 60%;
 	margin: 0 auto;
+	margin-top: 70px;
 	text-align: center;
 	background: rgba(0,0,0,0.5);
 	border-radius: 10px;
@@ -49,10 +50,11 @@ p{
 .header{
 	width: 100%;
 	position: fixed;
-	font-size: 25px;
-	color: ;
+	font-size: 31px;
+	color: #6c9521;
 	left: 20px;
 	top: 20px;
+	
 
 
 }
